@@ -713,6 +713,9 @@
 
       \item Binary mode in \code{fifo} on Windows is now properly detected
       from argument \code{open} (\PR{15600}, \PR{18031}).
+
+      \item \code{qnbinom(p, size, mu)} for large \code{size/mu} now warns
+      when it loses accuracy.  We plan to improve it instead (\PR{18095}).
     }
   }
 }
